@@ -5,6 +5,7 @@
 	* Added: Request::createFromPHPRequest
 	* Added: Response::send
 	* Added: Request::getQueryParameters
+	* Added: Utility for dealing with HTTP dates.
 	* Removed: Response::sendBody
 
 0.0.1-alpha (2012-10-07)
